service.yml
apiVersion: v1
kind: Service
metadata:
  name: logger-service
  namespace: logger
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app: logger-app
