ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: logger-ingress
  namespace: logger
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: logger-app
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: logger-service
              servicePort: 8080
